pingapp_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingapp-deployment
  namespace: ejer10
  labels:
    app: pingapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pingapp
  template:
    metadata:
      labels:
        app: pingapp
    spec:
      containers:
      - name: pingapp
        image: nicopaez/pingapp:2.1.0
        ports:
        - containerPort: 4567
