pingapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingapp
  namespace: ejer10
  labels:
    app: pingapp
spec:
  ports:
   - port: 4567
  selector:
   app: pingapp
