manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingapp
  labels:
    app: pingapp
spec:
  ports:
   - port: 4567
  selector:
   app: pingapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingapp-deployment
  labels:
    app: pingapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pingapp
  template:
    metadata:
      labels:
        app: pingapp
    spec:
      containers:
      - name: pingapp
        image: nicopaez/pingapp:2.1.0
        ports:
        - containerPort: 4567
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: pingapp-llujan1971.cloud.okteto.net
  - http:
      paths:
      - path: /pingapp
        pathType: Prefix
        backend:
          service:
            name: pingapp
            port:
              number: 4567
