pingapp_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingapp
  namespace: ejer10
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /pingapp
        pathType: Prefix
        backend:
          service:
            name: pingapp
            port:
              number: 4567
